--- a/Blazor.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Blazor.WEB/Pages/Countries/CountriesIndex.razor
@@ -1,41 +1,49 @@
 ﻿
 @using Blazor.WEB.Repositories;
 @using Sales.Shared.Entities;
+@using Blazor.WEB.Shared;
 
 @page "/countries"
 @inject IRepository repository
 
 <h3>Paises</h3>
-@if(Countries is null)
-{
-    <p>Cargando...</p>
-}
-else
-{
-    
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th></th>
-            <th>País</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var country in Countries)
-        {
-            <tr>
-                <td>
-                    <a class="btn btn-warning">Editar</a>
-                    <button class="btn btn-danger">Borrar</button>
-                </td>
-                <td>
-                    @country.Name
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-}
+
+<a class="btn btn-primary" href="/countries/create">Nuevo País</a>
+
+<GenericList MyList="Countries">
+
+    <Loading>
+        <p>Cargando...</p>
+    </Loading>
+
+    <Body>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>País</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var country in Countries!)
+                {
+                    <tr>
+                        <td>
+                            <a class="btn btn-warning">Editar</a>
+                            <button class="btn btn-danger">Borrar</button>
+                        </td>
+                        <td>
+                            @country.Name
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </Body>
+
+</GenericList>
+
 
 @code {
 
